changes on bootstrap

--- a/spring-cloud-master/spring-config-server/src/main/resources/bootstrap.yml
+++ b/spring-cloud-master/spring-config-server/src/main/resources/bootstrap.yml
@@ -5,4 +5,4 @@ spring:
     config:
       server:
         git:
-          uri: F:\sts-workspace\spring-cloud-master\config-git-repo
+          uri: F:\sts-workspace\my-projects\spring-cloud-master\config-git-repo
